[tool.poetry]
name = "fit2gpx"
version = "0.0.7"
description = "Package to convert .FIT files to .GPX files, including tools for .FIT files downloaded from Strava"
authors = ["Dorian Sabathier <dorian.sabathier+PyPi@gmail.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/dodo-saba/fit2gpx"
repository = "https://github.com/dodo-saba/fit2gpx"
keywords = ["convert", ".fit",  "fit", ".gpx",  "gpx", "strava"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "fit2gpx.py", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.5.3"
fitdecode = "^0.10.0"
gpxpy = "^1.5.0"

[tool.poetry.scripts]
fit2gpx = "fit2gpx:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
