# Inside of setup.cfg
[metadata]
name = fit2gpx
version = 0.0.6
author = dorian-saba
description = Package to convert .FIT files to .GPX files, including tools for .FIT files downloaded from Strava
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dodo-saba/fit2gpx
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Topic :: Scientific/Engineering :: GIS
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src